some crossreferences for relevance logic added

--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -2069,7 +2069,7 @@ This is especially so if you are tempted by the thought that logic and reasoning
 
 It may be denied that we ever have reasons to accept inconsistent claims; but this doesn't stand up to scrutiny. We all rely on a diversity of sources that contribute to the bodies of information on which we rely, and there is no guarantee that the information delivered from one source will be entirely consistent with the information arriving from another. These gathered pieces of information may not even come together in our thought; we may quarantine them in different fragments (they may appear to us to concern different topics) and may not even notice the tension between them.\footnote{For a discussion of this phenomenon, see David Lewis (1982) `Logic for Equivocators', \emph{Noûs} \textbf{16}, pp. 431--41,	 at p. 436.} 
 
-Some have suggested that a different logic ought to be adopted, perhaps a \define{relevance logic} that aims `to make relevance … a necessary condition for the validity of a valid entailment…’.\footnote{Robert K. Meyer (1971) ‘Entailment’, \emph{Journal of Philosophy} \textbf{68}, pp. 808–18, at p. 809. See also Edwin Mares (2024) ‘Relevance Logic’, in Edward N. Zalta (ed.) \emph{The Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/logic-relevance/}.} But such alternative logics have counterintuitive features of their own, including the need to introduce further truth values beyond truth and falsity! Perhaps better to again diminish the bearing of logic as a norm for reasoning: the existence of certain valid implications and acceptance natural deduction rules is no grounds for us to reason or infer in accordance with those rules.
+Some have suggested that a different logic ought to be adopted, perhaps a \define{relevance logic} that aims `to make relevance … a necessary condition for the validity of a valid entailment…’.\footnote{Robert K. Meyer (1971) ‘Entailment’, \emph{Journal of Philosophy} \textbf{68}, pp. 808–18, at p. 809.} But such alternative logics have counterintuitive features of their own, including the need to introduce further truth values beyond truth and falsity! Perhaps better to again diminish the bearing of logic as a norm for reasoning: the existence of certain valid implications and acceptance natural deduction rules is no grounds for us to reason or infer in accordance with those rules. (I return to the topic of relevance logic in §\ref{s:modifying}.)
 
 
 \section{De Morgan Laws}
