--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1072,8 +1072,8 @@ That brings you to the end of the material in this course. But we've barely scra
 The soundness and completeness theorems mentioned in the last section mark the stage at which introductory logic becomes intermediate logic. More than one of the authors of this book have written distinct sequels in which the completeness of \TFL\ is established, along with other results of a `metalogical' flavour. The interested student is directed to these open access texts: \begin{itemize}
 	\item Tim Button's book is \emph{Metatheory}; it covers just \TFL, and some of the results there were actually covered in this book already, notably results around expressiveness of \TFL\ in §\ref{s:expressiveness}. \emph{Metatheory} is available at \href{http://www.homepages.ucl.ac.uk/~uctytbu/Metatheory.pdf}{\nolinkurl{www.homepages.ucl.ac.uk/~uctytbu/Metatheory.pdf}} It should be accessible for self-study by students who have successfully completed this course.
 
-\item Antony Eagle's book \emph{Elements of Deductive Logic} goes rather further than \emph{Metatheory}, including direct proofs of Compactness for \TFL, consideration of alternative derivation systems, discussion of computation and decidability, and metatheory for \FOL. It is available at \httpurl{github.com/antonyeagle/edl}.
-\item The most comprehensive open access logic texts are those belonging to the Open Logic Project (\httpurl{openlogicproject.org}). There are open texts on intermediat logic, set theory, modal logic, non-classical logics. For most of the topics I touch on below, the Open Logic Project texts are reliable and accessible sources. There are many texts, remixing a common core of resources which together make up the whole open logic text. 
+\item Antony Eagle's book \emph{Elements of Deductive Logic} goes a little further than \emph{Metatheory}, including direct proofs of Compactness for \TFL, consideration of alternative derivation systems, discussion of computation and decidability, and metatheory for \FOL. Not updated recently, it is available at \httpurl{github.com/antonyeagle/edl}.
+\item The most comprehensive open access logic texts are those belonging to the Open Logic Project (\httpurl{openlogicproject.org}). There are open texts on intermediate logic, set theory, modal logic, non-classical logics. For most of the topics I touch on below, the Open Logic Project texts are reliable and accessible sources. There are many texts, remixing a common core of resources which together make up the whole open logic text. 
 \end{itemize}
 
 The metatheory of classical logic, the logic we've discussed, is well-understood. The subject of logic itself goes well beyond classical logic, in at least three ways.
@@ -1122,7 +1122,7 @@ Finally, another common extension of \FOL\ is to allow quantification over possi
 \end{earg}
 This sort of example can seem trivial, but in fact second-order logic has many powerful features that allow it to vastly outstrip the expressive capacity of \FOL. It has so much power that the philosopher W V O Quine once said that second-order logic is `set theory in sheep's clothing' – it has substantial mathematical content, disguised up as if it were nothing but pure logic.\footnote{W V O Quine (1970) \emph{Philosophy of Logic}, Harvard University Press, at pp. 64–8.}
 
-\subsection{Modifying Logic}
+\subsection{Modifying Logic}\label{s:modifying}
 
 Another direction we could take is not adding extra expressive resources to logic, but modifying the logic we already have in some way. We've already seen some attempts to do this, when we briefly considered intuitionistic logic and its restrictions on negation elimination in §\ref{construct}. 
 
@@ -1130,7 +1130,7 @@ More recently, influential alternative logics have been explored which result fr
 
 One prominent alternative is \define{linear logic}, which result from restrictions to the rule of contraction. Linear logic is sometimes said to be \emph{resource conscious}; it matters, in linear logic, how many times you need to appeal to an assumption in order to construct a proof. Some claims which might be provable by appealing twice to an assumption, may fail to be provable if you were permitted only to appeal once to that assumption. So in the assumptions of a linear logic proof it is important to note how many times an assumption appears – contraction, which says that the same things can be proved even if you throw away duplicate assumptions, is not compatible with keeping track of resources in this way. Linear logic has found uses in computer science, in modelling the behaviour of algorithms – in an actual computation, it can be very important to be efficient in the calls you make on resources. If appealing to an assumption involves reading that assumption from disk, for example, then the fewer appeals to the assumption you can make, the faster your algorithm will run.
 
-Amongst philosophers, however, the most prominent substructural logic is \define{relevance logic} (US), aka \define{relevant logic} (UK/Australasia).\footnote{See Burgess, \emph{op. cit.}, Priest, \emph{op. cit.}, and Edwin Mares `Relevance Logic' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/logic-relevance/}.} Relevant logicians argue that the so-called `paradoxes of material implication' (§\ref{s:ParadoxesOfMaterialConditional}) are symptoms of a broader failure of classical logic to require that the premises of a valid argument must be relevant to its conclusion. Relevant logicians are particularly incensed by the fact that $A \eand \enot A \proves B$; accordingly, they need to block the standard proof: \begin{proof}
+Amongst philosophers, however, the most prominent substructural logic is \define{relevance logic} (US), aka \define{relevant logic} (UK/Australasia).\footnote{See Burgess, \emph{op. cit.}, Priest, \emph{op. cit.}, and Edwin Mares `Relevance Logic' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/logic-relevance/}.} Relevant logicians argue that the so-called `paradoxes of material implication' (§\ref{s:ParadoxesOfMaterialConditional}) are symptoms of a broader failure of classical logic to require that the premises of a valid argument must be relevant to its conclusion. Relevant logicians are particularly incensed by the explosive fact that $A \eand \enot A \proves B$; accordingly, they need to block the standard proof:\footnote{You'll recall we saw more or less this exact proof in our discussion of the natural deduction rule of explosion in §\ref{exfalso}.} \begin{proof}
 	\hypo{ana}{A \eand \enot A}
 	\open
 	\hypo{b}{\enot B}
@@ -1138,8 +1138,7 @@ Amongst philosophers, however, the most prominent substructural logic is \define
 	\have{d}{\enot A}\Ae{ana}
 	\close
 	\have{e}{B}\nelim{b-c,b-d}
-\end{proof} The relevant logician doesn't wish to abandon any of these rules, or at least, not the intuition behind them. But they do generally want to resist our being able to introduce a new irrelevant assumption like `$\enot B$' whenever we want. So relevant logics are a class of substructural logic which don't satisfy weakening.
-
+\end{proof} The relevant logician doesn't wish to abandon any of these rules, or at least, not the intuition behind them. But they do generally want to resist our being able to introduce a new irrelevant assumption like `$\enot B$' whenever we want. So relevant logics are a class of substructural logic which don't satisfy weakening, and which block this proof by restricting the opening of arbitrary subproofs, precluding the irrelevant derivation of $B$ merely because of inconsistent prior assumptions. 
 
 A final class of modifications to classical logic I will consider are \define{many-valued logics}: logics that go beyond two truth values.\footnote{See Priest, \emph{op. cit.}, and Beall and van Fraassen, \emph{op. cit.}.} Some many-valued logics introduce just a third truth value, \emph{indeterminate}, to represent the truth values of unsettled matters such as contingent future outcomes. Such logics also gained some purchase as conditional logics – not extending classical logic this time, but changing the behaviour of the existing conditional. For example, many resist the idea that a conditional should be true just because its antecedent is false. Perhaps we should say rather that the conditional is unsettled when the antecedent is false, because we just can't tell whether the consequent follows. 
 
