--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -3,6 +3,7 @@
 % The original forallx.sty was written in 2005
 % Comments marked "TB" are additions by Tim Button in September 2012
 % Comments marked "Æ" are additions by Antony Eagle from June 2017
+\PassOptionsToPackage{dvipsnames}{xcolor}
 \RequirePackage{latexsym,amssymb,amsmath,hyperref,multicol,ifthen,graphicx,rotating,xcolor}
 \usepackage[numbered]{bookmark} %TB: added for speedy navigation
 
