tweaked example in §3

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -446,7 +446,7 @@ The two truth values that concern us are just \define{true} and \define{false}. 
 To form part of an argument, a sentence must have the kind of grammatical structure that permits it to have a truth value. In terms of the notion of structure introduced in §\ref{s:conclusiveargs}, we are going to focus on those structures which yield a declarative sentence when supplied with declarative sentences. For example `it is not the case that \meta{A}' yields a declarative sentence whenever we put a declarative sentence in for \meta{A}, and may not yield anything grammatical at all otherwise: \begin{earg}
 	\item[\ex{decl1}] It is not the case that \underline{dogs can fly}. (Declarative, true)
 	\item[\ex{decl2}] It is not the case that \underline{dogs bark}. (Declarative, false)
-	\item[\ex{decl3}] It is not the case that \underline{in 10,000\textsc{bc}, Kaurna people occupied Kangaroo Island}. (Declarative, unknown but determinate truth value)
+	\item[\ex{decl3}] It is not the case that \underline{in 20,000\textsc{bce}, Kaurna people permanently occupied Kangaroo Island}. (Declarative, unknown but determinate truth value)
 	\item[\ex{decl4}] It is not the case that \underline{are you feeling sleepy?} (Ungrammatical)
 \end{earg}
 
