fixed discussion of functions in §8.1 to acknowledge many-place functions

--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -9,9 +9,9 @@
 
 \section{Functions}\label{ss.function}
 
-So much for the grammar or syntax of \TFL. We turn now to the meaning of \TFL\ sentences. For technical reasons, it is best to  start with the intended interpretation of the connectives. 
+So much for the grammar or syntax of \TFL. We turn now to the meaning of \TFL\ sentences. For technical reasons, it is best to  start with the intended interpretation of the connectives. As a preliminary, we need to have the concept of a (mathematical) \emph{function}. 
 
-As a preliminary, we need to have the concept of a (mathematical) \emph{function}. Frequently, we refer to things not by name, but by the relations they have to other things. You can refer to Barack Obama by name, but one could equally refer to him in relation to his role, as `the 44th President of the United States', or in relation to his family, as `the husband of Michelle and father of Malia and Sasha'. These kinds of referring expressions are known as \emph{descriptions}, and we will look at them in more detail in §\ref{subsec.defdesc}. Our interest in them now is in the relations they involve. Barack Obama is denoted by `the biological father of Malia Obama' or `the biological father of Sasha Obama', in relation to his children. But we can consider `the biological father of …' in relation to other individuals: so `the biological father of Ivanka Trump' denotes Donald, `the biological father of Daisy Turnbull' denotes Malcolm, and so on. We can summarise this information in a table like this: 
+Frequently, we refer to things not by name, but by the relations they have to other things. You can refer to Barack Obama by name, but one could equally refer to him in relation to his role, as `the 44th President of the United States', or in relation to his family, as `the husband of Michelle and father of Malia and Sasha'. These kinds of referring expressions are known as \emph{descriptions}, and we will look at them in more detail in §\ref{subsec.defdesc}. Our interest in them now is in the relations they involve. Barack Obama is denoted by `the biological father of Malia Obama' or `the biological father of Sasha Obama', in relation to his children. But we can consider `the biological father of …' in relation to other individuals: so `the biological father of Ivanka Trump' denotes Donald, `the biological father of Daisy Turnbull' denotes Malcolm, and so on. We can summarise this information in a table like this: 
 \begin{center}
 \begin{tabular}{c|c} \toprule 
 Input & `the biological father of …'\\
@@ -22,11 +22,15 @@ Ivanka Trump & Donald\\
 Daisy Turnbull & Malcolm\\
 … & … \\ \bottomrule
 \end{tabular}
-\end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a function – in this case, the `biological father of' function. More precisely, a \define{function} is a relation between the members of some collection $A$ and some collection $B$ (which may be the same as $A$), such that each input to the function is a member of $A$, each output of the function is a member of $B$, and, crucially, each member of $A$ is associated with at most one member of $B$. So `the biological father of …' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We assume that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold. Some outputs are linked to more than one input: for example, Barack Obama is the common output of this function when it is given Malia Obama and Sasha Obama as inputs.
+\end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a function – in this case, the `biological father of' function. More precisely, a \define{function} is a relation between the members of some collection $A$ and some collection $B$ (which may be the same as $A$), such that each input to the function is a member (or some members) of $A$, each output of the function is a member of $B$, and, crucially, each input members of $A$ are associated with at most one member of $B$. So `the biological father of …' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We assume that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold. Some outputs are linked to more than one input: for example, Barack Obama is the common output of this function when it is given Malia Obama and Sasha Obama as inputs.
 
-A function is a map from some inputs to some outputs. To completely specify a function it is also important to identify what those inputs and outputs are. The English expression `the biological father of' could be understood as a function from human beings to human beings; or from living creatures to living creatures. One could even consider it as a function that takes any input whatever. In the latter case, the function will be \emph{undefined} for many possible inputs: the description, `the biological father of the Torrens footbridge' fails to refer to anything. If a function does not associate an output with every possible input, it is a \define{partial function}; if it is well-defined for every input, it is a \define{total function}. These notions are relative to the inputs in question: `the biological father of …' is a total function when the possible inputs are human beings, but only a partial function when anything could be a possible input.
+The 'biological father of' function, like all functions, yields one output. It also takes only one input. But some functions have more than one input. Consider the 'taller of' function that takes two people as input, and selects the taller of the two as output. So 'the taller of Ezi Magbegor and Alyssa Healy' would describe Ezi Magbegor. And we could consider functions with more inputs – for example, a function that takes 7 numbers as input and spits out their average. (Though for functions like 'the average of', it is more usual to let the input be a single set of numbers, and the output to be a single number, rather than letting there be multiple inputs – nothing really turns on this choice.) If a function takes one input, we'll say it is a \define{one-place} functions; if two inputs, a \define{two-place} functions; and so on.
 
-Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.)  
+A function is a map from some inputs to some outputs. To completely specify a function it is also important to identify what those inputs and outputs are. The English expression `the biological father of' could be understood as a function from human beings to human beings; or from living creatures to living creatures. One could even consider it as a function that takes any input whatever. In the latter case, the function will be \emph{undefined} for many possible inputs: the description, `the biological father of the Torrens footbridge' fails to refer to anything. If a function does not associate an output with every possible input, it is a \define{partial function}; if it is well-defined for every input, it is a \define{total function}. These notions are relative to the inputs in question: `the biological father of …' is a total function when the possible inputs are human beings, but only a partial function when anything could be a possible input. Again, this doesn't just apply to single-input functions: 'the eldest child of … and …' is a two-place partial function that takes two people as input, and yields as output their eldest child – if they have one.
+
+Common examples of functions occur in mathematics: we can consider the two-place function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself – this time all the inputs and outputs are drawn from the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a one-place function from people to numbers, mapping each person to the number of children they have, zero or more. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.)  
+
+For many of the functions we've considered so far, the order of inputs doesn't matter. But for some functions it does. Consider the two-place subtraction function, `$-$'. Given inputs $7$ and $4$, in that order, yields the output $3$ (i.e., $7-4=3$); but those same inputs, in a different order, yield $–3$.\footnote{There is an order-insensitive function which is closely related, the 'difference between' function, which yields $3$ when given those inputs in any order.}
 
 There are many relations which are not functions. While Barack Obama can be characterised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister. A function is a special kind of relation: one where each thing relates to some unique output. We treat the idea of a relation more thoroughly in §\ref{predrel}.
 
@@ -78,7 +82,7 @@ F & T & F\\
 F & F & F\\
 \bottomrule \end{tabular}
 \end{center}
-Note that conjunction is \define{commutative}. The truth value for $\meta{A} \eand \meta{B}$ is always the same as the truth value for $\meta{B} \eand \meta{A}$. 
+Note that conjunction is \define{commutative}. The truth value for $\meta{A} \eand \meta{B}$ is always the same as the truth value for $\meta{B} \eand \meta{A}$ – order doesn't matter for the inputs to this truth function. 
 
 \paragraph{Disjunction} Recall that `$\eor$' always represents inclusive or. So, for any sentences \meta{A} and \meta{B}, $\meta{A}\eor \meta{B}$ is true if and only if either \meta{A} or \meta{B} is true. We can summarize this in the schematic truth table for disjunction:
 \begin{center}
@@ -106,7 +110,7 @@ F & T & T\\
 F & F & T\\\bottomrule
 \end{tabular}
 \end{center}
-The conditional is \emph{not} commutative. You cannot swap the antecedent and consequent in general without changing the truth value, because $\meta{A}\eif\meta{B}$ has a different truth table from $\meta{B}\eif\meta{A}$. Compare: \begin{earg}
+The conditional is \emph{not} commutative – order matters. You cannot swap the antecedent and consequent in general without changing the truth value, because $\meta{A}\eif\meta{B}$ has a different truth table from $\meta{B}\eif\meta{A}$. Compare: \begin{earg}
 	\item If a coin lands heads 1000 times, something surprising has happened. (True – that is very surprising.)
 	\item If something surprising has happened, then a coin lands heads 1000 times. (False – there are other surprising things than that.)
 \end{earg}
