pdf generated and minor tweak to frontmatter

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -68,9 +68,9 @@ This book has been designed for use in conjunction with the University of Adelai
 		\item Chapters \ref{ch.FOL}–\ref{ch.semantics} cover quantified or predicate logic;
 		\item and Chapters \ref{ch.NDTFL}–\ref{ch.NDFOL} cover the formal proof systems for our logical languages.
 	\end{itemize}
-	\item The book contains many cross-references to other sections. So a reference to `§\ref{s.sentencesTFL}' indicates that you should consult section 6, subsection 2 – you will find this on page \pageref{s.sentencesTFL}. Cross-references and entries in the table of contents are hyperlinked.
+	\item The book contains many cross-references to other sections. So a reference to `§\ref{s.sentencesTFL}' indicates that you should consult section 6, subsection 2 – you will find this on page \pageref{s.sentencesTFL}. Cross-references and entries in the table of contents are hyperlinked – this includes numbered example sentences, such as this reference here: \ref{turnstile.trans}.
 	\item  Figure~\ref{fig:depend} shows how the sections depend on one another. For example, the arrows coming from §\ref{s:Interpretations} in the diagram show that understanding that section requires familiarity with §\ref{c:entvalid} and §\ref{s:FOLSentences}, and also any sections on which they depend.
-	\item Each chapter in the book concludes with a box labelled `Key Ideas in §$n$'. These are not a summary of the chapter, but contain some indication of what I regard as the main ideas that you should be taking away from your reading of the chapter. 
+	\item Each section in the book concludes with a box labelled `Key Ideas in §$n$'. These are not a summary of the section, but contain some indication of what I regard as the main ideas that you should be taking away from your reading of the section. 
 	\item Logical ideas and notation are pretty ubiquitous in philosophy, and there are a lot of different systems. We cannot cover all the alternatives, but some indication of other terminology and notation is contained in Appendix \ref{app.notation}.
 	\item A quick reference to many of the aspects of the logical systems I introduce can be found in Appendix \ref{ch.qr}.
 	\item When I first use a new piece of technical terminology, it is introduced by writing it in small caps, \textsc{like this}. The index of defined terms is Appendix \ref{app.index}.
